# DeviceTreeComparer

./: CMakeLists.txt  LICENSE
lib/: CMakeLists.txt  device_tree_parser.cpp  item.cpp  label.cpp  node.cpp  property.cpp  root_node.cpp  string_utils.cpp  string_utils.h
lib/public_headers/: device_tree_parser.h  item.h  label.h  node.h  property.h  root_node.h
src/: CMakeLists.txt  main.cpp
